# Animetracker

./: README.md  pyproject.toml
accounts/: admin.py  models.py
animetracker/: manage.py
animetracker/animetracker/: asgi.py  settings.py  wsgi.py
tracker/: admin.py  models.py
tracker/migrations/: 0001_initial.py
